[package]
name = "cat_engine"
version = "1.0.0-alpha0"
authors = ["Clomance <Hisoskar@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Clomance/CatEngine"
repository = "https://github.com/Clomance/CatEngine"
description = "A 2D graphics engine with audio output support"
documentation = "https://docs.rs/cat_engine/"
license = "MIT"
readme = "README.md"
keywords = [
    "windows",
    "windowing",
    "graphics",
    "opengl",
    "audio",
    "playback",
]

exclude = [
    "resources",
    "LICENSE",
    ".gitignore",
    "logo_400x400.png",
    "logo.png",
    "examples",
    "book",
    "RELEASE-NOTES.MD"
]

[package.metadata.docs.rs]
features = [
    "default",
    # AUDIO
    "extended_audio",
    # WINDOW
    # "fps_counter",
    # "ups_counter",
    # "file_drop"
]

[features]
default = [
    "audio",
    "simple_graphics",
    "texture_graphics",
    "text_graphics",
]

### AUDIO
audio = ["cat_audio"]
extended_audio = ["cat_audio/extended"]
raw_audio = ["cat_audio/raw"]


### GRAPHICS
# plain objects
simple_graphics = []
# textures
texture_graphics = []
# text
text_graphics = ["ttf-parser","ab_glyph_rasterizer"]

### WINDOW
# fps_counter = []
# ups_counter = []
# file_drop = ["cat_engine_basement/file_drop"]

### APPLICATION
# multi_windowing = []


# audio
[dependencies.cat_audio]
path = "cat_audio"
version = "0.0.4"
optional = true


[dependencies.cat_engine_basement]
path = "basement"


[dependencies]
# main
image = "0.23.13"

# text
ttf-parser = { version = "0.11.0", optional = true }
ab_glyph_rasterizer = { version = "0.1.4", optional = true }