[package]
name = "cat_engine"
version = "1.0.0"
authors = ["Clomance <Hisoskar@gmail.com>"]
edition = "2021"

homepage = "https://github.com/Clomance/CatEngine"
repository = "https://github.com/Clomance/CatEngine"
description = "A 2D graphics engine"
documentation = "https://docs.rs/cat_engine/"
license = "MIT"
readme = "README.md"
keywords = [
    "windows",
    "windowing",
    "graphics",
    "opengl",
]
exclude = [
    "resources",
    "LICENSE",
    ".gitignore",
    "logo_400x400.png",
    "logo.png",
    "examples",
    "book",
    "RELEASE-NOTES.MD"
]


[workspace]
members = [
    "basement",
    "cat_audio"
]


[dependencies.cat_engine_basement]
default-features = false
features = ["wnd_proc_catch_panic"]
path = "basement"
version = "0.0.0"


[dependencies.cat_audio]
path = "cat_audio"
version = "0.1.0"


[dependencies]
# text
ttf-parser = { version = "0.15.2" }
ab_glyph_rasterizer = { version = "0.1.6" }


[dev-dependencies]
image = "0.23.14"
minimp3 = "0.5.1"