[package]
name = "cat_engine_basement"
version = "0.0.0"
authors = ["Clomance <Hisoskar@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"
keywords = ["graphics", "opengl", "windows", "windowing"]
exclude = [
    "logo.png",
    "logo_400x400.png",
    "examples",
]


[features]
default = [
    "wnd_proc_catch_panic_default"
]

### WINAPI
set_cursor_event = []
wnd_proc_catch_panic = []
# The default panic handler.
wnd_proc_catch_panic_default = ["wnd_proc_catch_panic"]


[target.'cfg(any(target_os="windows",doc))'.dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef",
    "minwindef",
    "wingdi",
    "libloaderapi",
    "errhandlingapi",
    "profileapi",
    "winbase",
]


[dependencies]
glm = "0.2.3"
image = "0.23.14"