[package]
name = "cat_audio"
version = "0.0.5"
authors = ["Clomance <Hisoskar@gmail.com>"]
edition = "2021"

homepage = "https://github.com/Clomance/CatEngine/tree/master/cat_audio"
repository = "https://github.com/Clomance/CatEngine/tree/master/cat_audio"
description = "A multichannel audio engine for CatEngine"
documentation = "https://docs.rs/cat_audio/"
license = "MIT"
readme = "README.md"
keywords = ["audio","playback"]
exclude = [
    "logo.png",
    "logo_400x400.png",
    "examples",
]

[package.metadata.docs.rs]
features = ["extended"]
rustdoc-args = ["--no-deps"]

[features]
extended = []
raw = ["extended"]
# audio_post_processing = []

[dependencies.cat_engine_basement]
path = "../basement"
version = "0.0.0"
features = []
default-features = false

[dependencies]
cpal = "0.11.0"
minimp3 = "0.5.1"